syntax = "proto3";
import "common.proto";
import "cells.proto";

option java_multiple_files = true;
option java_package = "com.annatarhe.athena.proto.collections";
option java_outer_classname = "CollectionProto";

package proto;

service Collections {
  rpc GetList (PaginationRequest) returns (CellsReply) {}
  rpc Add (CollectionItem) returns (CommonBoolReply) {}
  rpc Remove (CollectionItem) returns (CommonBoolReply) {}
}

message CollectionItem {
    int64 id = 1;
    int64 cell = 2;
    int32 owner = 3;
    int64 createdAt = 1000;
    int64 updatedAt = 1001;
}